# cubeland

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md
art/blocks/brick/: inventory.psd  material.psd
art/blocks/cobblestone/: inventory.psd  material_all.psd
art/blocks/dirt/: bottom.psd  inventory.psd  material_bottom.psd  material_side.psd  material_top.psd  side.psd  top.psd
art/blocks/glass/: all.psd  inventory.psd  material_all.psd
art/blocks/stone/: all.psd  inventory.psd  material_all.psd
art/blocks/torch/: inventory.psd  material_side.psd  material_top.psd  side.psd  top.psd
art/inventory/: delete.psd
art/particles/: big smoke.psd
rsrc/: .gitattributes  README.md
rsrc/default/text/: about.md  third_party.md
rsrc/shaders/hdr/: bloom.frag  hdr.frag  tonemap.frag  tonemap.vert
rsrc/shaders/lighting/: lighting.frag  sky.frag  skybox.vert
rsrc/shaders/misc/: particle.frag  particle.vert  test.frag  test.vert
rsrc/shaders/model/: chunk.frag  chunk.vert  chunk_highlight.frag  chunk_shadow.frag  chunk_shadow.vert  model.frag  model.vert
rsrc/shaders/output/: fxaa.frag  fxaa.vert
rsrc/shaders/pipeline/: fxaa.frag  fxaa.vert
rsrc/shaders/ssao/: blur.frag  occlusion.frag
rsrc/sql/: keycache_v1.sql  prefs_v1.sql  world_v1.sql
server/: main.cpp
server/auth/: KeyCache.cpp  KeyCache.h
server/net/: Listener.cpp  Listener.h  ListenerClient.cpp  ListenerClient.h  PacketHandler.h
server/net/handlers/: Auth.cpp  Auth.h  BlockChange.cpp  BlockChange.h  Chat.cpp  Chat.h  Chunk.cpp  Chunk.h  PlayerInfo.cpp  PlayerInfo.h  PlayerMovement.cpp  PlayerMovement.h  Time.cpp  Time.h  WorldInfo.cpp  WorldInfo.h
server/world/time/: Clock.cpp  Clock.h
shared/include/: LoggingAssert.h
shared/io/: Format.h  GlmTypes+fmt.h  PathHelper+Mac.mm  Serialization.h  SocketTypes+fmt.h
shared/net/: EPAuth.h  EPBlockChange.h  EPChat.h  EPChunk.h  EPPlayerInfo.h  EPPlayerMovement.h  EPTime.h  EPWorldInfo.h  PacketTypes.h
shared/util/: CPUID.cpp  LZ4.cpp  LZ4.h  Math.h  REST.h  SQLite.h  SSLHelpers.h  Signature.h  Thread.cpp  ThreadPool.h
shared/world/: AbstractWorldSource.h  FileWorldReader+Reading.cpp  FileWorldReader+Writing.cpp  FileWorldReader.cpp  WorldReader.h  WorldSource.cpp  WorldSource.h
shared/world/block/: BlockIds.h
shared/world/chunk/: Chunk.cpp  Chunk.h  ChunkSlice.h
shared/world/generators/: Terrain.cpp  Terrain.h
src/: main.cpp  version.cpp.in
src/chat/: Manager.cpp  Manager.h  Window.cpp  Window.h
src/gfx/lights/: DirectionalLight.cpp  DirectionalLight.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/gfx/model/: Mesh.cpp  Mesh.h  Model.cpp  Model.h  RenderProgram.h
src/gui/: DisconnectedError.h  GameUI.cpp  GameUI.h  GameWindow.h  InGamePrefsWindow.cpp  InGamePrefsWindow.h  Loaders.cpp  Loaders.h  MainWindow.cpp  MainWindow.h  MenuBarHandler.cpp  MenuBarHandler.h  MetricsDisplay.cpp  MetricsDisplay.h  PreferencesWindow.cpp  PreferencesWindow.h  RunLoopStep.h
src/gui/imgui/: ImGuiFileDialogConfig.h  imconfig.h
src/gui/title/: AboutWindow.cpp  AboutWindow.h  PlasmaRenderer.cpp  PlasmaRenderer.h  ServerSelector.cpp  ServerSelector.h  TitleScreen.cpp  TitleScreen.h  WorldSelector.cpp  WorldSelector.h
src/include/: Logging.h  LoggingAssert.h  version.h
src/input/: BlockInteractions.cpp  BlockInteractions.h  InputManager.cpp  InputManager.h  PlayerPosPersistence.cpp  PlayerPosPersistence.h
src/inventory/: ItemDrawing.cpp  ItemDrawing.h  Manager.cpp  Manager.h  Serialization.h  UI.cpp  UI.h  UIBar.cpp  UIBar.h  UIDetail.cpp  UIDetail.h
src/io/: ConfigManager.cpp  ConfigManager.h  EigenTypes+fmt.h  Format.h  GlmTypes+fmt.h  MetricsManager.cpp  MetricsManager.h  PathHelper+Mac.mm  PathHelper.cpp  PathHelper.h  PrefsManager.cpp  PrefsManager.h  ResourceManager.cpp  ResourceManager.h  Serialization.h  TimeTypes+fmt.h
src/logging/: Logging.cpp  Logging.h  LoggingAssert.h
src/net/: PacketHandler.h  ServerConnection.cpp  ServerConnection.h
src/net/handlers/: Auth.cpp  Auth.h  BlockChange.cpp  BlockChange.h  Chat.cpp  Chat.h  Chunk.cpp  Chunk.h  PlayerInfo.cpp  PlayerInfo.h  PlayerMovement.cpp  PlayerMovement.h  Time.cpp  Time.h  WorldInfo.cpp  WorldInfo.h
src/particles/: Renderer.cpp  Renderer.h  System.cpp  System.h
src/physics/: BlockCollision.cpp  BlockCollision.h  Engine.cpp  Engine.h  EngineDebugRenderer.cpp  EngineDebugRenderer.h  PlayerWorldCollisionHandler.cpp  PlayerWorldCollisionHandler.h  Types.h
src/render/: Camera.cpp  Camera.h  RenderStep.cpp  RenderStep.h  WorldRenderer.cpp  WorldRenderer.h  WorldRendererDebugger.cpp  WorldRendererDebugger.h
src/render/chunk/: ChunkWorker.cpp  ChunkWorker.h  Globule.cpp  Globule.h  VertexGenerator.cpp  VertexGenerator.h  VertexGeneratorData.cpp  VertexGeneratorData.h  WorldChunk.cpp  WorldChunk.h  WorldChunkDebugger.cpp  WorldChunkDebugger.h
src/render/scene/: ChunkLoader.cpp  ChunkLoader.h  Drawable.h  SceneRenderer.cpp  SceneRenderer.h  WorldChunk.cpp  WorldChunk.h
src/render/steps/: FXAA.cpp  FXAA.h  HDR.cpp  HDR.h  Lighting.cpp  Lighting.h  SSAO.cpp  SSAO.h
src/util/: Blur.h  CPUID.cpp  CPUID.h  Easing.h  Frustum.h  Intersect.h  LZ4.cpp  LZ4.h  SQLite.h  TexturePacker.h  Thread.h  ThreadPool.h
src/web/: AuthManager.cpp  AuthManager.h
src/world/: ClientWorldSource.h  FileWorldReader+Reading.cpp  FileWorldReader+SQLite.cpp  FileWorldReader+Writing.cpp  FileWorldReader.cpp  FileWorldReader.h  FileWorldSerialization.h  LocalSource.h  RemoteSource.cpp  RemoteSource.h  TimePersistence.cpp  TimePersistence.h  WorldGenerator.h  WorldReader.h  WorldSource.cpp  WorldSource.h
src/world/block/: Block.cpp  Block.h  BlockDataGenerator.cpp  BlockDataGenerator.h  BlockRegistry.cpp  BlockRegistry.h  RegisterBuiltins.cpp  TextureLoader.cpp  TextureLoader.h
src/world/blockImpl/: Brick.cpp  Brick.h  Cobblestone.cpp  Cobblestone.h  Dirt.cpp  Dirt.h  Glass.cpp  Glass.h  Stone.cpp  Stone.h  Torch.cpp  Torch.h
src/world/chunk/: Chunk.cpp  Chunk.h  ChunkSlice.h
src/world/debug/: WorldDebugger.cpp  (+1 more)
tools/: .gitignore  README.md  build_rsrc.py
(+63 files in other folders)
